fix: (22.05.20) Fixed long status text was going out of bounds

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -586,6 +586,7 @@ p
     font-size: 15px
     line-height: 23px
     color: #1C1C1C
+    word-break: break-word
 .status-list-body-container-no-padding-left
   padding-top: 0px !important
   p
@@ -595,6 +596,7 @@ p
     font-size: 15px
     line-height: 23px
     color: #1C1C1C
+    word-break: break-word
 .status-list-bottom-container
   padding-left: 65px !important
   padding-bottom: 15px !important
